crates/forge/tests/e2e/snapshots/backtrace/main__e2e__backtrace__snap_test_backtrace_test_level_should_panic@2.20.0.snap
---
source: crates/forge/tests/e2e/backtrace.rs
expression: stdout
---


[PASS] backtrace_test_should_panic::tests::test_panics_in_test_body_with_should_panic (l1_gas: ~0, l1_data_gas: ~0, l2_gas: ~7010)

stack backtrace:
   in test 'backtrace_test_should_panic::tests::test_panics_in_test_body_with_should_panic':
      0: core::panic_with_const_felt252
         at [..]lib.cairo:360:5
      1: core::panic_with_const_felt252
         at [..]lib.cairo:360:5
      2: (inlined) backtrace_test_should_panic::tests::test_panics_in_test_body_with_should_panic
         at [..]lib.cairo:14:5
      3: backtrace_test_should_panic::tests::test_panics_in_test_body_with_should_panic__snforge_internal_test_generated
         at [..]lib.cairo:14:5
