crates/forge/tests/e2e/snapshots/backtrace/main__e2e__backtrace__snap_test_backtrace_test_level_should_panic_mismatch@2.19.2.snap
---
source: crates/forge/tests/e2e/backtrace.rs
expression: stdout
---
error: failed to unpack package `triomphe v0.1.16`
  failed to open `/Users/maks/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/triomphe-0.1.16/.cargo-ok`
  File exists (os error 17)
error: process did not exit successfully: exit status: 101
[ERROR] `scarb metadata` exited with error

stdout:
error: failed to unpack package `triomphe v0.1.16`
  failed to open `/Users/maks/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/triomphe-0.1.16/.cargo-ok`
  File exists (os error 17)
error: process did not exit successfully: exit status: 101

stderr:
