crates/forge/tests/e2e/snapshots/backtrace/main__e2e__backtrace__snap_test_backtrace_test_level_should_panic_mismatch@2.20.1.snap
---
source: crates/forge/tests/e2e/backtrace.rs
expression: stdout
---


[FAIL] backtrace_test_should_panic_mismatch::tests::test_panics_in_test_body_with_should_panic_mismatch

Failure data:
    Incorrect panic data
    Actual:    felt252 0x417373657274206661696c6564 ('Assert failed')
    Expected:  felt252 0x77726f6e67206d7367 ('wrong msg')

stack backtrace:
   in test 'backtrace_test_should_panic_mismatch::tests::test_panics_in_test_body_with_should_panic_mismatch':
      0: core::panic_with_const_felt252
         at [..]lib.cairo:360:5
      1: core::panic_with_const_felt252
         at [..]lib.cairo:360:5
      2: (inlined) backtrace_test_should_panic_mismatch::tests::test_panics_in_test_body_with_should_panic_mismatch
         at [..]lib.cairo:14:5
      3: backtrace_test_should_panic_mismatch::tests::test_panics_in_test_body_with_should_panic_mismatch__snforge_internal_test_generated
         at [..]lib.cairo:14:5


Failures:
    backtrace_test_should_panic_mismatch::tests::test_panics_in_test_body_with_should_panic_mismatch
